Added features -> "Edit" and "Delete"

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         </div>
     </div>
 
+    <div class="myname">
+        ~~~ Made By Sri Varenya ~~~
+    </div>
     
     <script src="index.js"></script>
 </body>
